<resources>
    <string name="app_name">CriminalIntent</string>
    <string name="crime_title_hint">Enter Crime Title.</string>
    <string name="crime_title_label">Title</string>
    <string name="crime_details_label">Detail Info.</string>
    <string name="crime_solved_label">Solved</string>
    <string name="date_picker_title">Crime date:</string>
    <string name="time_picker_title">Crime time:</string>
    <string name="capture_title">Captured Image</string>
    <string name="new_crime">New Crime</string>
    <string name="show_subtitle">Show Subtitle</string>
    <string name="hide_subtitle">Hide Subtitle</string>
    <string name="subtitle_format">%1$s ea</string>
    <string name="crime_delete_button">Delete</string>
    <string name="empty_list_text">Crime List is Empty!</string>
    <string name="crime_suspect_text">Select Suspect</string>
    <string name="crime_report_text">Send crime report</string>
    <string name="crime_report">%1$s! The crime date is %2$s. %3$s, and %4$s</string>
    <string name="crime_report_solved">The case is solved</string>
    <string name="crime_report_unsolved">The case is not solved</string>
    <string name="crime_report_no_suspect">No Suspect</string>
    <string name="crime_report_suspect">Suspect is %s</string>
    <string name="crime_report_subject">CriminalIntent Crime Report</string>
    <string name="send_report">Send Crime Report</string>
    <string name="call_suspect">Call</string>

    <plurals name="subtitle_plural">
        <item quantity="one">%1$s crime</item>
        <item quantity="other">%1$s crimes</item>
    </plurals>
</resources>
